adding gallery section and for now i go eat some pasta

--- a/main.css
+++ b/main.css
@@ -153,6 +153,51 @@ hr {
 
 }
 /*-------------------
+    GALLERY
+    --------------*/
+    #gallery {
+        background-color: #fff;
+    }
+
+    #gallery .grid li {
+        padding: 30px;
+        height: 350px;
+        border-radius: 3px;
+        background-clip: content-box;
+        background-size: cover;
+        background-position: center;
+        background-color: #333;
+
+    }
+
+    #gallery ul.grid {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    #gallery .grid li.small {
+        flex-basis: 40%;
+    }
+    #gallery .grid li.large {
+        flex-basis: 60%;
+    }
+
+    #gallery p {
+        max-width: 800px;
+        text-align: center;
+        margin: 0 auto 35px;
+        padding: 0 20px;
+        line-height: 2;
+    }
+    @media(max-width: 1000px) {
+        #gallery .grid li.small,
+        #gallery .grid li.large {
+            flex-basis: 100%;
+        }
+    }
+/*-------------------
     FOOTER
     --------------*/
 footer {
