--- a/main.css
+++ b/main.css
@@ -198,6 +198,62 @@ hr {
         }
     }
 /*-------------------
+    TECHNOLOGIES
+    --------------*/
+    #getting-around {
+        text-align: center;
+        max-width: 1000px;
+        margin: 0 auto;
+    }
+
+    #getting-around ul.grid {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 60px;
+    }
+
+
+    #getting-around p {
+        margin-bottom: 20px;
+
+    }
+
+    #getting-around ul.grid li {
+        flex-basis: 30%;
+        padding: 0 20px;
+        margin-bottom: 30px;
+    }
+
+    .ico {
+        font-size: 60px;
+        margin-bottom: 20px;
+    }
+
+    #getting-around ul.grid li h4 {
+        color: #555;
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+
+    @media(max-width: 1000px) {
+        #getting-around {
+            padding: 0 40px;
+
+        }
+
+        #getting-around ul.grid li {
+            flex-basis: 75%;
+            margin-bottom: 65px;
+        }
+        #getting-around ul.grid li p {
+            text-align: center;
+        }
+    }
+
+/*-------------------
     FOOTER
     --------------*/
 footer {
