--- a/main.css
+++ b/main.css
@@ -252,7 +252,70 @@ hr {
             text-align: center;
         }
     }
+/*-------------------
+    QUOTES
+    --------------*/
+    #famous-quotes {
+        background-color: #fafafa;
+        padding-bottom: 40px;
+        text-align: center;
+    }
 
+    #famous-quotes .portrait-photos {
+        border-radius: 50%;
+        border: 4px solid #ECD078;
+        margin-bottom: 10px;
+        max-width: 15%;
+        min-width: 15%;
+    }
+
+    #famous-quotes .portrait-photos:firs-child {
+        margin-top: 20px;
+
+    }
+
+    #famous-quotes .quote {
+        font-size: 22px;
+        font-weight: 400;
+        line-height: 1.5;
+        margin-bottom: 20px;
+        padding: 0;
+    }
+
+    #famous-quotes .author {
+        margin: 20px auto;
+    }
+    #famous-quotes .author:last-child {
+        margin-bottom: 0;
+
+    }
+    @media(max-width: 1000px) {
+        #famous-quotes .quote {
+            font-size: 18px;
+            padding: 0 20px;
+
+        }
+        #famous-quotes .author {
+            font-size: 14px;
+        }
+    }
+/*-------------------
+    MAP
+    --------------*/
+    section.flexbox-section {
+        width: 100%;
+        
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    section.flexbox-section p {
+        max-width: 900px;
+        text-align: center;
+        margin-bottom: 35px;
+        padding: 0 20px;
+        line-height: 1.5;
+    }
 /*-------------------
     FOOTER
     --------------*/
