--- a/main.css
+++ b/main.css
@@ -177,6 +177,7 @@ header nav li {
 #about {
     padding: 10px;
     background-color: #f7f7f7;
+    vertical-align: middle;
     margin-bottom: 20px;
     min-height: 100vh;
 }
@@ -185,6 +186,7 @@ header nav li {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    vertical-align: middle;
 }
 
 .about-image {
@@ -200,7 +202,8 @@ header nav li {
     margin-left: 20px;
 }
 
-@media(max-width: 600px) {
+@media(max-width: 1000px) {
+    
 
     #about, #two-cols {
         flex-direction: column;
@@ -331,8 +334,8 @@ header nav li {
         border-radius: 50%;
         border: 4px solid #ECD078;
         margin-bottom: 10px;
-        max-width: 15%;
-        min-width: 15%;
+        max-width: 5%;
+        
     }
 
     #famous-quotes .portrait-photos:firs-child {
